@@ -1,11 +1,12 @@
 package com.ziyara.backend.infrastructure.config;
 
+import com.ziyara.backend.infrastructure.config.properties.ZiyaraCorsProperties;
 import com.ziyara.backend.infrastructure.security.JwtAuthenticationFilter;
-import com.ziyara.backend.infrastructure.web.LocaleFilter;
 import lombok.RequiredArgsConstructor;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
+import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
@@ -16,20 +17,18 @@ import org.springframework.security.config.annotation.web.configuration.EnableWe
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.core.userdetails.UserDetailsService;
-import org.springframework.http.HttpMethod;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
-import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.security.web.context.SecurityContextRepository;
+import org.springframework.security.web.csrf.CookieCsrfTokenRepository;
 import org.springframework.security.web.util.matcher.RequestMatcher;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
-import jakarta.servlet.http.HttpServletRequest;
-
+import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.List;
 
@@ -45,9 +44,9 @@ import java.util.List;
 public class SecurityConfig {
 
     private final JwtAuthenticationFilter jwtAuthFilter;
-    private final LocaleFilter localeFilter;
     private final UserDetailsService userDetailsService;
-    
+    private final ZiyaraCorsProperties corsProperties;
+
     @Bean
     public SecurityFilterChain securityFilterChain(HttpSecurity http, SecurityContextRepository securityContextRepository)
             throws Exception {
@@ -57,7 +56,9 @@ public class SecurityConfig {
                 .csrfTokenRepository(CookieCsrfTokenRepository.withHttpOnlyFalse())
                 .ignoringRequestMatchers(
                     "/auth/**",
-                    "/actuator/**",
+                    "/actuator/health",
+                    "/actuator/health/**",
+                    "/actuator/info",
                     "/swagger-ui/**",
                     "/swagger-ui.html",
                     "/api-docs/**",
@@ -70,7 +71,6 @@ public class SecurityConfig {
                 .ignoringRequestMatchers("/public/**")
             )
             .securityContext(sc -> sc.securityContextRepository(securityContextRepository))
-            // Stateless JWT: anonymous principal + deferred context can hide Bearer auth; permitAll does not need it.
             .anonymous(AbstractHttpConfigurer::disable)
             .cors(cors -> cors.configurationSource(corsConfigurationSource()))
             .authorizeHttpRequests(auth -> auth
@@ -79,47 +79,59 @@ public class SecurityConfig {
                 .requestMatchers(HttpMethod.GET, "/services", "/services/**").permitAll()
                 .requestMatchers(HttpMethod.GET, "/content-pages", "/content-pages/**").permitAll()
                 .requestMatchers(HttpMethod.POST, "/public/**").permitAll()
-                .requestMatchers("/auth/**", "/actuator/**", "/pay/webhooks", "/swagger-ui/**", "/swagger-ui.html",
+                .requestMatchers("/auth/**", "/actuator/health", "/actuator/health/**", "/actuator/info",
+                        "/pay/webhooks", "/swagger-ui/**", "/swagger-ui.html",
                         "/api-docs/**", "/v3/api-docs/**").permitAll()
+                .requestMatchers("/actuator/**").authenticated()
                 .anyRequest().authenticated()
             )
             .sessionManagement(session -> session
                 .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
             )
             .authenticationProvider(authenticationProvider())
-            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class)
-            .addFilterBefore(localeFilter, JwtAuthenticationFilter.class);
-        
+            .addFilterBefore(jwtAuthFilter, UsernamePasswordAuthenticationFilter.class);
+
         return http.build();
     }
-    
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOrigins(List.of("*"));
+        if (corsProperties.isAllowAllOrigins()) {
+            configuration.setAllowedOriginPatterns(List.of("*"));
+            configuration.setAllowCredentials(false);
+        } else {
+            List<String> origins = new ArrayList<>(corsProperties.resolveAllowedOrigins());
+            if (origins.isEmpty()) {
+                // CORS with credentials requires at least one explicit origin; avoid startup failure in misconfigured slices.
+                origins.add("http://localhost");
+            }
+            configuration.setAllowedOrigins(origins);
+            configuration.setAllowCredentials(corsProperties.isAllowCredentials());
+        }
         configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
-        configuration.setExposedHeaders(List.of("Authorization"));
-        
+        configuration.setExposedHeaders(Arrays.asList("Authorization", "X-XSRF-TOKEN"));
+        configuration.setMaxAge(3600L);
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
-    
+
     @Bean
     public AuthenticationProvider authenticationProvider() {
-        // Use no-arg constructor for compatibility across Spring Security versions.
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
-    
+
     @Bean
     public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
         return config.getAuthenticationManager();
     }
-    
+
     @Bean
     public PasswordEncoder passwordEncoder() {
         return new BCryptPasswordEncoder();
